# enV5-experiments

./: .devenv.flake.nix  .gitignore  CMakeLists.txt  CMakePresets.json  README.adoc  README.md  devenv.nix  fpga.bit  helper.cmake  pyproject.toml
cmake/: eai_runtime_import.cmake  load_third_party_deps.cmake  unit_test_framework.cmake
src/: CMakeLists.txt  Main.c  experiment.c  experiment.py
src/example-lib/: CMakeLists.txt
test/hardware/: CMakeLists.txt  HardwaretestHelper.c  HardwaretestMqttPublish.c
test/unit/: CMakeLists.txt
